# boosty-orbtc-indexer

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .sqlfluff  .taplo.conf  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  docker-compose.yaml  justfile
api-core/: Cargo.toml
api-core/src/: api_errors.rs  lib.rs  pages.rs  serde_utils.rs  server.rs
docs/: db-stats.txt
docs/swagger/: swagger.yaml
firehose-btc/: go.mod  go.sum  main.go
orbtc/: .env  .gitignore  .rustfmt.toml  .sqlfluff  CHANGELOG.md  Cargo.toml  Dockerfile  build.rs  config.toml  docker-compose.yaml  justfile
orbtc-indexer-api/: Cargo.toml
orbtc-indexer-api/src/: btc.rs  lib.rs  runes.rs
orbtc-indexer-api/src/types/: amount.rs  hash.rs  mod.rs
orbtc/src/: config.rs  lib.rs  main.rs  mempool_api.rs  ord_api.rs  signal.rs
orbtc/src/cache/: mod.rs
orbtc/src/cmd/: api_keys.rs  indexer.rs  migrate.rs  mod.rs
orbtc/src/db/: mod.rs  models.rs  query_builder.rs  schema.rs  seed_data.rs
orbtc/src/db/migrations/: 0001_initial_utxo_indexer_db.sql  0002_add_api_keys.sql  0003_add_runes_tables.sql  0004_add-utxo-extras.sql
orbtc/src/firehose/: mod.rs  sf.rs
orbtc/src/firehose/proto/: bitcoin.proto  firehose.proto
orbtc/src/indexer/: bitcoin_indexer.rs  bitcoin_indexer_state.rs  db.rs  inscriptions_index.rs  mod.rs  rt.rs  runes_indexer.rs  runes_indexer_state.rs
orbtc/src/rest/: api.rs  api_btc.rs  api_runes.rs  auth_middleware.rs  context.rs  mempool_cache.rs  metrics.rs  mod.rs  requests.rs  swagger.rs
orbtc/src/service/: mod.rs
orbtc/src/service/utxo_collector/: algo.rs  mod.rs
scripts/: Dockerfile.ci-build
scripts/deployment/: Caddyfile  Readme.md  justfile  orbtc.toml  postgresql.conf  services-conf.env
scripts/deployment/services/: bitcoind.service  node_exporter.service  orbtc-api.service  orbtc-indexer.service  orbtc-runes-indexer.service  postgres_exporter.service
