[workspace]
members = ["api-core", "orbtc", "orbtc-indexer-api"]
resolver = "2"

[workspace.package]
authors = ["The BoostyLabs Developers"]
edition = "2021"
homepage = "https://github.com/ordinals/ord"
license = "Apache 2.0"
repository = "https://github.com/BoostyLabs/boosty-orbtc-indexer"

# these are dependencies used by more than 1 crate. We want to keep
# using same version for all crates to avoid issues.
[workspace.dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-web = "4.5.1"
actix-web-prom = { version = "0.9.0", features = ["process"] }
anyhow = "1.0.81"
async-trait = "0.1.80"
awc = { version = "3.4.0", features = ["rustls"] }
base64 = "0.22.1"
bb8 = "0.9.0"
bb8-redis = "0.20.0"
bigdecimal = { version = "0.4.5", features = ["serde", "serde-json"] }
bitcoin = { version = "^0.32.5", features = [
  "rand",
  "serde",
  "base64",
  "secp-recovery",
] }
bitcoincore-rpc = "0.19.0"
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
futures = "0.3.30"
hex = "0.4.3"
log = { version = "0.4.21", features = ["kv", "std", "serde", "kv_serde"] }
mime_guess = "2.0.4"
num_enum = "0.7.3"
ordinals = { version = "^0.0.15" }
prometheus = { version = "0.13.4", features = ["process"] }
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = [
  "http2",
  "charset",
  "json",
  "rustls-tls",
  "cookies",
] }
rust-embed = { version = "8.3.0", features = [
  "actix",
  "actix-web",
  "mime-guess",
] }
sentry = { version = "0.43.0", default-features = false, features = [
  "anyhow",
  "log",
  "rustls",
  "reqwest",
  "panic",
  "release-health",
  "backtrace",
  "contexts",
] }
sentry-actix = "0.34.0"
sentry-tracing = "0.34.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115", features = ["raw_value"] }
sqlx = { version = "0.8.2", default-features = false, features = [
  "runtime-tokio-rustls",
  "json",
  "derive",
  "migrate",
  "macros",
  "postgres",
  "tls-rustls",
  "bigdecimal",
  "chrono",
] }
thiserror = "^2.0.0"
tokio = { version = "1.43.0", default-features = false, features = ["full"] }
tokio-util = { version = "0.7.10", default-features = false, features = [
  "full",
] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
ulid = { version = "1.1.2", features = ["serde", "postgres"] }

[profile.profiling]
debug = true
inherits = "release"
