[package]
edition = "2021"
name = "api-core"
publish = false
version = "0.1.0"

[dependencies]
actix-cors.workspace = true
actix-web.workspace = true
actix-web-prom.workspace = true
anyhow.workspace = true
bigdecimal.workspace = true
hex.workspace = true
log.workspace = true
num_enum.workspace = true
prometheus.workspace = true
reqwest.workspace = true
rust-embed.workspace = true
sentry.workspace = true
sentry-actix.workspace = true
sentry-tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber.workspace = true
