[package]
default-run = "orbtc"
edition = "2021"
name = "orbtc"
version = "0.5.3"

# these lints are disabled
[lints.clippy]
field_reassign_with_default = "allow"
inconsistent_digit_grouping = "allow"
too_many_arguments = "allow"
uninlined_format_args = "allow"
vec_init_then_push = "allow"

[dependencies]
actix.workspace = true
actix-cors.workspace = true
actix-web.workspace = true
actix-web-prom.workspace = true
anyhow.workspace = true
api-core = { path = "../api-core" }
async-trait.workspace = true
base64.workspace = true
bb8.workspace = true
bb8-redis.workspace = true
bigdecimal.workspace = true
bitcoin.workspace = true
bitcoincore-rpc.workspace = true
clap.workspace = true
diesel = { version = "2.2.1", features = [
  "postgres",
  "chrono",
  "numeric",
  "serde_json",
  "uuid",
] }
env_logger.workspace = true
futures.workspace = true
hex.workspace = true
instant = "0.1.13"
log.workspace = true
mime_guess.workspace = true
num_enum.workspace = true
orbtc-indexer-api = { path = "../orbtc-indexer-api", features = [
  "diesel",
  "sqlx",
] }
ordinals.workspace = true
prometheus.workspace = true
prost = "0.14.1"
prost-types = "0.14.1"
rand.workspace = true
reqwest = { version = "0.12.12", default-features = false, features = [
  "http2",
  "charset",
  "json",
  "rustls-tls",
  "cookies",
  "blocking",
] }
rust-embed.workspace = true
sentry.workspace = true
sentry-actix.workspace = true
sentry-tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.8"
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tonic = { version = "0.14.2", features = [
  "gzip",
  "tls-webpki-roots",
  "tls-connect-info",
] }
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
tracing-subscriber.workspace = true

[dev-dependencies]
rstest = "0.26.0"


[build-dependencies]
tonic-prost-build = "0.14.2"

[features]
firehose = []
# If on, exposes some private fields, methods, etc.
# They are required for some specific tests.
# This feature is not intended to be on for release builds.
test-tweak = []
